# graphql-vss-data-server

./: .gitignore  .gitmodules  README.md
commonapi-wrappers/: CMakeLists.txt  gen_wrappers.sh
commonapi-wrappers/include/org/genivi/vehicle/playgroundtypes/: PlaygroundTypes.hpp  PlaygroundTypesSomeIPDeployment.hpp
commonapi-wrappers/include/v1/org/genivi/vehicle/playground/: Playground.hpp  PlaygroundInstanceIds.hpp  PlaygroundProxy.hpp  PlaygroundSomeIPDeployment.cpp  PlaygroundSomeIPDeployment.hpp  PlaygroundStub.hpp
cpp-server/: .clang-tidy  CMakeLists.txt  Pipfile  schema.graphql  vsomeip.json
cpp-server/examples/apollo-client/: .env.example  .eslintrc.json  collect-stats.sh  package.json  tsconfig.json  update-permissions.sh
cpp-server/examples/apollo-client/src/: index.ts  link.ts  mutations.ts  operations.ts  permissions.ts  queries.ts
cpp-server/implementation/: CMakeLists.txt  implementation.cpp  implementation.hpp
cpp-server/implementation/attributes/v1_org_genivi_vehicle_playground_PlaygroundProxy_1/: CapacityAttribute.hpp  ConsumptionAttribute.hpp  CurrentGearAttribute.hpp  CurrentTankVolumeEvent.hpp  DoorsOpeningStatusAttribute.hpp  DrivePowerTransmissionAttribute.hpp  EngineSpeedAttribute.hpp  IsReverseGearOnAttribute.hpp  SeatHeatingLevelAttribute.hpp  SeatHeatingStatusAttribute.hpp  VehiclePositionEvent.hpp  VolumeAttribute.hpp
cpp-server/implementation/dispatcher/vehicle/cabin/seat/: selectHeatingFromSeatHeatingStatus.hpp
cpp-server/implementation/dispatcher/vehicle/cabin/seat/row1/: pos1.hpp  pos2.hpp
cpp-server/implementation/dispatcher/vehicle/cabin/seat/row2/: pos1.hpp  pos2.hpp
cpp-server/implementation/dispatcher/vehicle/powertrain/: transmission.hpp
cpp-server/implementation/franca_idl/vehicle/: cabin.cpp  cabin.hpp  currentlocation.hpp
cpp-server/implementation/franca_idl/vehicle/cabin/door/row1/: left.cpp  left.hpp  right.cpp  right.hpp
cpp-server/implementation/franca_idl/vehicle/cabin/door/row2/: left.cpp  left.hpp  right.cpp  right.hpp
cpp-server/implementation/franca_idl/vehicle/cabin/seat/: heating.hpp
cpp-server/implementation/franca_idl/vehicle/cabin/seat/row1/: pos1.hpp  pos2.hpp
cpp-server/implementation/franca_idl/vehicle/cabin/seat/row2/: pos1.hpp  pos2.hpp
cpp-server/implementation/franca_idl/vehicle/powertrain/: fuelsystem.cpp  fuelsystem.hpp  transmission.cpp  transmission.hpp
cpp-server/implementation/franca_idl/vehicle/powertrain/combustionengine/: engine.cpp  engine.hpp
cpp-server/implementation/proxies/: v1_org_genivi_vehicle_playground_PlaygroundProxy_1.hpp
cpp-server/scripts/: generate_keys.sh
cpp-server/src/: server.cpp
resources/: .gitignore  vehicle_hpp_headers_open.hpp
scripts/: build_release_server.sh
scripts/git/: install_git_hooks.sh  pre-commit
scripts/install_dependencies/etc/: defaults.sh
scripts/install_dependencies/etc/check_installed/: CMakeLists.txt
scripts/install_dependencies/lib/: build_tools.sh  clang9.sh  cmake.sh  cppgraphqlgen.sh  dlt.sh  googletest.sh  graphql-vss-server-libs.sh  jwt.sh  libboost.sh  nvm.sh  rapidjson-dev.sh  websocketpp.sh
scripts/install_dependencies/lib/covesa/: commonapi-core-runtime.sh  commonapi-dbus-runtime.sh  commonapi-someip-runtime.sh  git_clone_all.sh  vsomeip.sh
scripts/install_dependencies/sources/covesa/: 3.1.sh  3.2.sh  latest.sh
scripts/install_dependencies/sources/custom/: custom.sh
